--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/jest": "^29.5.3",
     "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "ts-jest": "^29.1.1"
   }
 }
