--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jest": "^29.5.3",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
+    "jest-location-mock": "^1.0.10",
     "ts-jest": "^29.1.1"
   }
 }
